Replace depracted new Integer() by Integer.valueOf()