@@ -6,14 +6,14 @@ public class Main implements DataTypeIfazeMethodReturnTypeGeneralization {
 
 	@Override
 	public Integer method1() {
-		return new Integer(5);
+		return Integer.valueOf(5);
 	}
-	
+
 	public static void main(String[] args) {
 
 		DataTypeIfazeMethodReturnTypeGeneralization constr = new Main();
 		Integer test = constr.method1();
-		
+
 	}
 
 }
