@@ -6,9 +6,9 @@ public class Main implements DataTypeIfazeMethodReturnTypeUnboxing{
 
 	@Override
 	public Integer method1() {
-		return new Integer(5);
+		return Integer.valueOf(5);
 	}
-	
+
 	public static void main(String[] args) {
 		DataTypeIfazeMethodReturnTypeUnboxing ifaze = new Main();
 		Integer test = ifaze.method1();
